--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 			В данный момент сайт не готов. Заходите позже.
 			<br/><br/>
 			Сайт готов на: <br/>
-			<progress max="100" value="82">
+			<progress max="100" value="82"> <br/>
+			DTCraft  готов на: <br/>
+			<progress max="100" value="2">
 		</div>
-		<!-- <div class="lol">test</div> -->
 	</body>
 </html>
