--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 			В данный момент сайт не готов. Заходите позже.
 			<br/><br/>
 			Сайт готов на: <br/>
-			<progress max="100" value="82"> <br/>
+			<progress max="100" value="82"></progress> <br/>
 			DTCraft  готов на: <br/>
-			<progress max="100" value="2">
+			<progress max="100" value="2"></progress>
 		</div>
 	</body>
 </html>
